fixed button z-index and changed image alts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
 		font-family: "clash-display", sans-serif;
 	}
 	.mobileNav {
-		@apply md:hidden absolute right-8 top-16 w-32 bg-stone-800 rounded-lg overflow-hidden text-xl justify-center items-center flex transition-all duration-500 ease-in-out;
+		@apply md:hidden absolute right-8 top-16 w-32 z-10 bg-stone-800 rounded-lg overflow-hidden text-xl justify-center items-center flex transition-all duration-500 ease-in-out;
 	}
 }
 
